hphp/hack/test/typecheck/new_inference/eager_solve/any_as_lower_bound.php.exp
File "any_as_lower_bound.php", line 5, characters 3-87:
  (function(): (_ | void))
File "any_as_lower_bound.php", line 5, characters 11-86:
This function can exit with and without returning a value (Typing[4421])
  File "any_as_lower_bound.php", line 9, characters 7-16:
  Returning a value here.
  File "any_as_lower_bound.php", line 7, characters 7-13:
  Returning without a value here
