hphp/hack/test/typecheck/new_inference/eager_solve/any_as_lower_bound.php
<?hh // partial
// Copyright 2004-present Facebook. All Rights Reserved.

function f(bool $b, $a): void {
  hh_show(() ==> {
    if ($b) {
      return;
    } else {
      return $a;
    }
  });
}

function v(): void {}
